src/test/deca/context/invalid/created/sans_objet/no_operation.deca
// Description:
//    no operation
//
// Resultats:
//    error ligne 12
//
// Historique:
//    cree le 13/01/2024

{   
    int x;
    x = 1 
    // manque de ;
}